meja/tests/apply-fail.stderr
File "tests/apply-fail.meja", line 1, characters 33-37:
Error: Incompatable types 'int' and 'unit':
Cannot unify 'int' and 'unit'.

